# Elastic-Averaging-SGD

./: .gitignore  CMakeLists.txt  README.md
data/: training_error_rank_0_tau_4_beta_3.96.txt  training_error_rank_1_tau_4_beta_3.96.txt  training_error_rank_2_tau_4_beta_3.96.txt  training_error_rank_3_tau_4_beta_3.96.txt  training_error_rank_4_tau_4_beta_3.96.txt  training_stats_cifar10_sequential_momentum_batch_size_1000.txt  training_stats_cifar_eamsgd_size3_rank_0_tau_10_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size3_rank_0_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size3_rank_0_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size3_rank_0_tau_4_beta_3.96_delta_0.9_momentum_0.txt  training_stats_cifar_eamsgd_size3_rank_1_tau_10_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size3_rank_1_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size3_rank_1_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size3_rank_1_tau_4_beta_3.96_delta_0.9_momentum_0.txt  training_stats_cifar_eamsgd_size3_rank_2_tau_10_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size3_rank_2_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size3_rank_2_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size3_rank_2_tau_4_beta_3.96_delta_0.9_momentum_0.txt  training_stats_cifar_eamsgd_size5_rank_0_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_0_tau_16_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_0_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_0_tau_8_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_1_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_1_tau_16_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_1_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_1_tau_8_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_2_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_2_tau_16_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_2_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_2_tau_8_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_3_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_3_tau_16_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_3_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_3_tau_8_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_4_tau_10_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_4_tau_16_beta_3.96_delta_0.9.txt  training_stats_cifar_eamsgd_size5_rank_4_tau_4_beta_3.96_delta_0.9_momentum_0.9.txt  training_stats_cifar_eamsgd_size5_rank_4_tau_8_beta_3.96_delta_0.9.txt  training_stats_eamsgd_size3_rank_0_tau_8_beta_3.96_delta_0.9.txt  training_stats_eamsgd_size3_rank_1_tau_8_beta_3.96_delta_0.9.txt  (+53 more)
include/: ConvNet.hpp  cifar10.h  convnet.h  convnet_cifar.h
results/cifar/eamsgd old/: stats_cifar_EAMSGD_size3_rank_0_tau_2_alpha_0.25_delta_0.9_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_0_tau_2_beta_2_delta_0.7_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_0_tau_2_beta_4_delta_0.7_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_0_tau_2_beta_4_delta_0.9_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_0_tau_4_beta_2_delta_0.7_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_0_tau_4_beta_4_delta_0.9_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_0_tau_8_beta_2_delta_0.7_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_1_tau_2_beta_2_delta_0.7_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_1_tau_2_beta_2_delta_0.9_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_1_tau_2_beta_4_delta_0.9_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_1_tau_4_beta_2_delta_0.7_momentum_0.txt  stats_cifar_EAMSGD_size3_rank_1_tau_8_beta_2_delta_0.7_momentum_0.txt  (+118 more)
src/: CMakeCache.txt  CMakeLists.txt  ConvNet.cpp  Makefile  cifar10.cpp  cmake_install.cmake  convnet_cifar.cpp  eamsgd  eamsgd.cpp  eamsgd_cifar  eamsgd_cifar.cpp  eamsgd_mnist  easgd  easgd.cpp  easgd_cifar  easgd_cifar.cpp  easgd_cifar10.cpp  easgd_mnist  experiment.sh  experiment_2.sh  experiment_easgd.sh  experiment_mnist.sh  main  main.cpp  msgd  msgd.cpp  msgd_cifar  msgd_cifar.cpp  msgd_mnist  plotting.py  sgd.cpp  test.cpp  torchtest  torchtest.cpp
(+175 files in other folders)
